[gd_scene load_steps=3 format=3 uid="uid://6nq6c3ygsuni"]

[ext_resource type="Theme" uid="uid://basxgfcidqdr7" path="res://resources/themes/combat/default_ui_theme.tres" id="1_6yady"]
[ext_resource type="Script" path="res://ui/combat_map_view/equippable_item_information/equippable_item_information.gd" id="1_uilya"]

[node name="Equippable_item_information" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -872.0
offset_bottom = -548.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uilya")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(225, 100)
layout_mode = 2
offset_right = 280.0
offset_bottom = 100.0
theme = ExtResource("1_6yady")

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TypeContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/TypeContainer"]
layout_mode = 2
text = "Type"

[node name="TypeValue" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/TypeContainer"]
layout_mode = 2
text = "Sword"

[node name="CenterContainer2" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="LeftLabelContainer" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DamageLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/LeftLabelContainer"]
layout_mode = 2
text = "Damage"
vertical_alignment = 1

[node name="HitLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/LeftLabelContainer"]
layout_mode = 2
text = "Hit"
vertical_alignment = 1

[node name="LeftValueContainer" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="DamageValue" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/LeftValueContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="HitValue" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/LeftValueContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="RightLabelContainer" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="CritLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/RightLabelContainer"]
layout_mode = 2
text = "Crit"

[node name="AvoidLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/RightLabelContainer"]
layout_mode = 2
text = "Avoid
"

[node name="RightValueContainer" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CritValue" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/RightValueContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="AvoidValue" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/RightValueContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
